tests/neg-inline-trait/disallow-lazyval-in-inline-trait.scala
inline trait Foo:
    lazy val foo: Any // error
